<resources>
    <string name="app_name">SmartTasks</string>
    <string name="ok">Ok</string>
    <string name="error_occurred">Something went wrong</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="due_date">Due date</string>
    <string name="days_left">Days left</string>
    <string name="today">Today</string>
    <string name="no_tasks_for_today">No tasks for today!</string>
    <string name="overdue">0</string>
    <string name="task_detail">Task Detail</string>
    <string name="resolve">Resolve</string>
    <string name="cant_resolve">Can\'t resolve</string>
    <string name="unresolved">Unresolved</string>
    <string name="resolved">Resolved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="enter_comment_title">Do you want to leave a comment?</string>
    <string name="user_comment">User comment</string>
    <string name="task_status_icon">Task Status Icon</string>
</resources>